--- a/app/src/main/res/layout/view_history.xml
+++ b/app/src/main/res/layout/view_history.xml
@@ -21,8 +21,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/title"
@@ -97,7 +96,7 @@
             android:id="@+id/btn_rent_house_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
@@ -109,7 +108,7 @@
             android:id="@+id/btn_mortgage_loan"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:background="@drawable/solid_button_circle"
@@ -121,7 +120,7 @@
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/solid_button_circle"
             android:text="개인 신용 대출\n조회 기록"
