--- a/app/src/main/res/layout/deposit_detail_screen.xml
+++ b/app/src/main/res/layout/deposit_detail_screen.xml
@@ -400,12 +400,12 @@
             android:textSize="20dp"/>
 
         <Button
-            android:id="@+id/btn_home"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_homepage"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:layout_gravity="center"
-            android:text="홈"
+            android:text="공식 홈페이지"
             android:textSize="20dp"
             android:textColor="@color/white"
             android:background="@drawable/solid_button"
