--- a/app/src/main/res/layout/mortgage_loan_detail_screen.xml
+++ b/app/src/main/res/layout/mortgage_loan_detail_screen.xml
@@ -65,7 +65,7 @@
 
             <TextView
                 android:id="@+id/loan_rate_type"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
@@ -79,7 +79,7 @@
 
             <TextView
                 android:id="@+id/loan_rpay_type"
-                android:layout_width="wrap_content"
+                android:layout_width="160dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
@@ -361,12 +361,12 @@
             android:textSize="20dp"/>
 
         <Button
-            android:id="@+id/btn_home"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_homepage"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:layout_gravity="center"
-            android:text="홈"
+            android:text="공식 홈페이지"
             android:textSize="20dp"
             android:textColor="@color/white"
             android:background="@drawable/solid_button"
