--- a/app/src/main/res/layout/savings.xml
+++ b/app/src/main/res/layout/savings.xml
@@ -24,12 +24,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:paddingStart="30dp"
         android:background="@color/light_blue"
         android:text="적금"
         android:textSize="22dp"
-        android:textColor="@color/black"
-        android:paddingStart="30dp"
-        android:layout_marginBottom="20dp"/>
+        android:textColor="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:id="@+id/btn_deposit"
             android:layout_width="3dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
@@ -59,7 +59,7 @@
             android:layout_width="3dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/solid_button_circle"
             android:text="연금 저축\n바로 가기"
@@ -78,8 +78,6 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="금융기관"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="1dp"
             android:dropDownWidth="200dp"
             android:spinnerMode="dropdown">
         </Spinner>
@@ -89,7 +87,6 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="금리유형"
-            android:layout_marginEnd="1dp"
             android:dropDownWidth="200dp"
             android:spinnerMode="dropdown">
         </Spinner>
@@ -99,7 +96,6 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="적립유형"
-            android:layout_marginEnd="1dp"
             android:dropDownWidth="200dp"
             android:spinnerMode="dropdown">
         </Spinner>
@@ -108,7 +104,6 @@
             android:id="@+id/img_view_find"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginEnd="1dp"
             android:src="@drawable/find_icon"/>
 
     </LinearLayout>
